alteracao a partir do github

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h1>Minha pagina HTML</h1>
-
+    <p> alteracao a partir do github </p>
     <h2>Alterações</h2>
   </body>
 </html>
